#395 add module on all test