@@ -219,6 +219,51 @@
 				</dependency>
 			</dependencies>
 
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-compiler-plugin</artifactId>
+
+						<executions>
+							<execution>
+								<id>default-testCompile</id>
+								<phase>test-compile</phase>
+								<configuration>
+									<fork>true</fork>
+									<compilerArgs>
+										<arg>--add-exports</arg>
+										<arg>org.simpleflatmapper.csv/org.simpleflatmapper.csv.mapper=org.simpleflatmapper.csv.test</arg>
+										<arg>--add-exports</arg>
+										<arg>org.simpleflatmapper.csv/org.simpleflatmapper.csv.impl=org.simpleflatmapper.csv.test</arg>
+										<arg>--add-exports</arg>
+										<arg>org.simpleflatmapper.csv/org.simpleflatmapper.csv.impl.cellreader=org.simpleflatmapper.csv.test</arg>
+										<arg>--add-exports</arg>
+										<arg>org.simpleflatmapper.csv/org.simpleflatmapper.csv.impl.primitive=org.simpleflatmapper.csv.test</arg>
+										<arg>--add-exports</arg>
+										<arg>org.simpleflatmapper.csv/org.simpleflatmapper.csv.impl.writer=org.simpleflatmapper.csv.test</arg>
+										<arg>--add-exports</arg>
+										<arg>org.simpleflatmapper.csv/org.simpleflatmapper.csv.parser=org.simpleflatmapper.csv.test</arg>
+									</compilerArgs>
+								</configuration>
+								<goals>
+									<goal>testCompile</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>
+
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-surefire-plugin</artifactId>
+
+						<configuration>
+							<argLine>--add-opens java.base/java.lang=ALL-UNNAMED</argLine>
+						</configuration>
+					</plugin>
+				</plugins>
+
+			</build>
 		</profile>
 
 	</profiles>
