@@ -186,5 +186,54 @@
 		</profile>
 
 
+		<profile>
+			<id>jdk19</id>
+			<activation>
+				<jdk>9-ea</jdk>
+			</activation>
+
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-compiler-plugin</artifactId>
+
+						<executions>
+							<execution>
+								<id>default-testCompile</id>
+								<phase>test-compile</phase>
+								<configuration>
+									<fork>true</fork>
+									<compilerArgs>
+										<arg>--add-exports</arg>
+										<arg>org.simpleflatmapper.jdbc/org.simpleflatmapper.jdbc.impl=org.simpleflatmapper.jdbc.test</arg>
+										<arg>--add-exports</arg>
+										<arg>org.simpleflatmapper.jdbc/org.simpleflatmapper.jdbc.impl.getter=org.simpleflatmapper.jdbc.test</arg>
+										<arg>--add-exports</arg>
+										<arg>org.simpleflatmapper.jdbc/org.simpleflatmapper.jdbc.converter=org.simpleflatmapper.jdbc.test</arg>
+										<arg>--add-exports</arg>
+										<arg>org.simpleflatmapper.jdbc/org.simpleflatmapper.jdbc.converter.time=org.simpleflatmapper.jdbc.test</arg>
+									</compilerArgs>
+								</configuration>
+								<goals>
+									<goal>testCompile</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>
+
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-surefire-plugin</artifactId>
+
+						<configuration>
+							<argLine>--add-opens java.base/java.lang=ALL-UNNAMED</argLine>
+						</configuration>
+					</plugin>
+				</plugins>
+
+			</build>
+		</profile>
+
 	</profiles>
 </project>
